# hello_sdl

./: .gitignore  CMakeLists.txt  README.md  hello_sdl.cpp  version.cmake
src/: Pong.cpp  Pong.h  hello_sdl.cpp
